*Empty MediaWiki Message*

--- a/Ingɛlandi.mw
+++ b/Ingɛlandi.mw
@@ -19,16 +19,18 @@ etando_koleka = nn |
 etando_bonɛ́nɛ = 1 E11 |
 etando = 130.395 |
 ndámbo_mái = nn |
-population_estimate_year = nn |
-population_census = 49.138.831 |
-population_census_year = 2001 |
-population_density = 377 |
-population_density_rank = nn |
-GDP_PPP_year = 2005 |
-GDP_PPP = $1,825,837 million |
-GDP_PPP_rank = UK |
-GDP_PPP_per_capita = $30,658 |
-GDP_PPP_per_capita_rank = UK |
+bato_ndakisa-mitúya 	= ?|
+bato_ndakisa-mitúya_mbúla=?|
+bato_ndakisa-mitúya_limati=- |
+bato_na_etando 	= 377|
+bato_na_etando_limati=-|
+bato_botángi 	= 49 138 831|
+bato_botángi_mbúla= -|
+BOTIBO_BOZIBI 		= $1,825,837 million|
+BOTIBO_BOZIBI_mbúla=2005 |
+BOTIBO_BOZIBI_limati= - |
+BOTIBO_BOZIBI_moto_na_moto 	= $30,658 |
+BOTIBO_BOZIBI_moto_na_moto_limati= - |
 sovereignty_type = [[Act of Union 1800|Establishment]] |
 established_events = nn |
 established_dates = 1801<sup>5</sup>|
