--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -14,7 +14,7 @@ loléngé_lɛ́ta  	= [[Republiki]]|
 babengí_mokambi	= [[Bakambi ekólo Kɔ́ngɔ-Kinshasa|Mokonzi wa ekólo]] |
 nkómbó_mokambi 	= [[Joseph Kabila]] |
 etando 			= 2 345 410|
-etando_koleka		=ya 12|
+etando_limati		=ya 12|
 etando_bonɛ́nɛ		=2 E9|
 ndámbo_mái =3.3|
 bato_ndakisa-mitúya 	= 62 660 551|
