*Empty MediaWiki Message*

--- a/Falansia.mw
+++ b/Falansia.mw
@@ -42,3 +42,7 @@ footnotes 	= [[Image:france cities.png|290px]]
 
 <br><small><sup>1</sup></small> **dont 543 965 en France métropolitaine<br /><small><sup>2</sup></small> **dont 60 656 178 en France métropolitaine<br /><small><sup>3</sup></small> **densité métropolitaine 111,51<br /><small><sup>4</sup></small> [[Franc CFP]] **en usage dans les territoires du pacifique|
 }}
+'''Falansia''' (''France'' na lokóta ya [[lifalansé]]) ezalí [[esé]] ya [[Erópa]] ya límbe.
+
+[[Category:Esé]]
+[[Category:Bisé ya Eropa]]
