--- a/Kongó-Brazzaville.mw
+++ b/Kongó-Brazzaville.mw
@@ -39,7 +39,7 @@ cctld		= .[[ISO 3166-2:CG|cg]]|
 calling_code	= 242|
 footnotes 	=|
 }}
-'''Republiki ya Kɔ́ngɔ''' tǒ '''Kɔ́ngɔ-Brazzaville''' ezalí [[esé]] ya [[Afríka]] ya [[Mambénga]. 
+'''Republiki ya Kɔ́ngɔ''' tǒ '''Kɔ́ngɔ-Brazzaville''' ezalí [[esé]] ya [[Afríka]] ya [[Mambénga]]. 
 
 [[Category:Esé]]
 [[Category:Kɔ́ngɔ-Brazzaville]]
