*Empty MediaWiki Message*

--- a/Namibia.mw
+++ b/Namibia.mw
@@ -36,15 +36,13 @@ cctld		= [[.na]] |
 calling_code	= 264|
 footnotes 	= |
 }}
-
-
-
+'''Namibia''' ezalí [[esé]] na [[nsé]] ya [[Afríka]].
 
 
 {{Bisé ya Afrika}}
 {{ndámbo}}
-[[Category:Afrika]]
-[[Category:Bisé ya Afrika]]
+[[Category:Esé]]
+[[Category:Namibia|*]]
 
 [[af:Namibië]]
 [[am:ናሚቢያ]]
