--- a/Kongó-Brazzaville.mw
+++ b/Kongó-Brazzaville.mw
@@ -30,8 +30,8 @@ BOTIBO_BOZIBI_limati=ya 0|
 BOTIBO_BOZIBI_moto_na_moto 	= 000|
 BOTIBO_BOZIBI_moto_na_moto_limati=ya 000|
 sovereignty_type 	=[[dipanda]] |
-established_events 	= - [[**Traité de Verdun]]|
-established_dates 	= <br/>- 843 |
+established_events 	= - dipanda na [[Falansia]]|
+established_dates 	= <br/>- [[15 Ogusiti]] [[1960]] |
 mosɔlɔ 	 	= [[falánga CFA]]|currency_code=XAF|
 ngonga 		= [[CET]] |utc_offset=+1 na +2 |
 ngonga_DST	= - | utc_offset_DST=- |
@@ -41,5 +41,41 @@ footnotes 	=|
 }}
 '''Republiki ya Kɔ́ngɔ''' tǒ '''Kɔ́ngɔ-Brazzaville''' ezalí [[esé]] ya [[Afríka]] ya [[Mambénga]]. 
 
+{{Template:Bisé ya Afrika}}
+
 [[Category:Esé]]
+[[Category:Bisé ya Afrika]]
 [[Category:Kɔ́ngɔ-Brazzaville]]
+
+[[ar:جمهورية الكونغو]]
+[[bn:কঙ্গো]]
+[[ca:Congo]]
+[[da:Republikken Congo]]
+[[de:Republik Kongo]]
+[[en:Republic of the Congo]]
+[[eo:Kongo Brazavila]]
+[[es:Congo]]
+[[fi:Kongon tasavalta]]
+[[fr:République du Congo]]
+[[he:הרפובליקה של קונגו]]
+[[ia:Republica del Congo]]
+[[id:Republik Kongo]]
+[[it:Repubblica del Congo]]
+[[ja:コンゴ共和国]]
+[[ko:콩고 공화국]]
+[[lt:Kongas]]
+[[lv:Kongo]]
+[[ms:Republik Congo]]
+[[nds:Republiek Kongo]]
+[[nl:Republiek Congo]]
+[[nn:Kongo-Brazzaville]]
+[[no:Republikken Kongo]]
+[[pl:Republika Konga]]
+[[pt:Congo]]
+[[ru:Конго, Народная Республика]]
+[[sk:Kongo]]
+[[sl:Republika Kongo]]
+[[sv:Republiken Kongo]]
+[[uk:Конго, Народна Республіка]]
+[[zh:刚果共和国]]
+[[zh-min-nan:Congo Kiōng-hô-kok]]
