--- a/Kongó-Brazzaville.mw
+++ b/Kongó-Brazzaville.mw
@@ -2,8 +2,8 @@
 nkómbó 			= Republiki ya Kɔ́ngɔ|
 nkómbó_na_lokóta	= République du Congo|
 image_flag 		= Flag_of_the_Republic_of_the_Congo.svg |
-image_coat 		= Image:Congo_rep_coa.png |
-image_map 		= Image:LocationRCongo.png |
+image_coat 		= Congo_rep_coa.png |
+image_map 		= LocationRCongo.png |
 mokáno			= Unité, travail, progrès|
 loyémbo			= [[La Congolaise]] |
 nkótá_ya_lɛ́ta 		= [[lifalansé]]|
@@ -37,9 +37,49 @@ ngonga 		= [[CET]] |utc_offset=+1 na +2 |
 ngonga_DST	= - | utc_offset_DST=- |
 cctld		= .[[ISO 3166-2:CG|cg]]|
 calling_code	= 242|
-footnotes 	=|
+footnotes 	= [[Image:congo republic sm04.png|290px]] Republiki ya Kɔ́ngɔ.|
 }}
 '''Republiki ya Kɔ́ngɔ''' tǒ '''Kɔ́ngɔ-Brazzaville''' ezalí [[esé]] ya [[Afríka]] ya [[Mambénga]]. 
+
+== Lokótá ==
+==Likambo ==
+==Bato ==
+[[Image:Congo-Rep-demography.png|left|600px|center|***Évolution de la démographie entre 1961 et 2003 (chiffre de la [[Organisation des Nations unies pour l'alimentation et l'agriculture|FAO]], 2005). Population en milliers d'habitants.]]
+==Bitúká bya Kɔ́ngɔ ==
+[[Image:Congo_regions_named.png|right|350px|<!-->Map of the regions of the Republic of the Congo.<-->]]
+Ekakoli ya molayi: [[Bitúká bya Kɔ́ngɔ]]
+*[[Bouenza Region|Bouenza]] ([[Madingou]])
+*[[Cuvette Region|Cuvette]] ([[Owando]])
+*[[Cuvette-Ouest Region|Cuvette-Ouest]] ([[Ewo]])
+*[[Kouilou Region|Kouilou]] ([[Pointe-Noire]])
+*[[Lékoumou Region|Lékoumou]] ([[Sibiti]])
+*[[Likouala Region|Likouala]] ([[Impfondo]])
+*[[Niari Region|Niari]] ([[Loubomo]])
+*[[Plateaux Region (Congo)|Plateaux]] ([[Djambala]])
+*[[Pool Region|Pool]] ([[Kinkala]])
+*[[Sangha Region|Sangha]] ([[Ouésso]])
+
+* [[Brazzaville]], the national capital, is a commune within a capital district.
+
+These regions are subdivided into 46 [[Districts of the Republic of the Congo|districts]].
+
+
+==Bikela ==
+===Zamba na banyama : bobateli bwa bikela o kati ya zamba ya leta ===
+=== Bikela bikopesa biloko bya kobongola ===
+=== Bikela bikopesa bilei mpe nkisi ===
+==Politiki ==
+
+==Jyografi ==
+[[image:congo republic sm04.png|right|<!-->Map of the Republic of the Congo<-->]]
+
+==Ekonomi ==
+==Kiltiri ==
+== Divers ==
+== Tála mpé ==
+== Mankásá o libándá== 
+
+
 
 {{Template:Bisé ya Afrika}}
 
