/* Bitúká bya Kɔ́ngɔ */

--- a/Kongó-Brazzaville.mw
+++ b/Kongó-Brazzaville.mw
@@ -61,8 +61,7 @@ Ekakoli ya molayi: [[Bitúká bya Kɔ́ngɔ]]
 
 * [[Brazzaville]], the national capital, is a commune within a capital district.
 
-These regions are subdivided into 46 [[Districts of the Republic of the Congo|districts]].
-
+<!-->These regions are subdivided into<!--> 46 [[Bitúká bya Kɔ́ngɔ|districts]].
 
 ==Bikela ==
 ===Zamba na banyama : bobateli bwa bikela o kati ya zamba ya leta ===
