Image:Map - DR Congo, major languages.svg

--- a/Lingála.mw
+++ b/Lingála.mw
@@ -1,7 +1,7 @@
 <div style="position:relative;visibility:hidden">---Sidenote START---</div>
 [[Image:LanguageMap-Lingala-Larger Location.png|thumb|right|description]]
 [[Image:Lingala-pn.jpg|thumb|texte manquant pour exemple de langue.]]
-[[Image:Map_-_DR_Congo,_major_languages.png|thumb|texte manquant pour exemple de langue.]]
+[[Image:Map - DR Congo, major languages.svg|thumb|texte manquant pour exemple de langue.]]
 
 '''Lingála''' ezalí [[lokótá]] ya bato ba [[Kɔ́ngɔ-Brazzaville]] mpé ba [[Kɔ́ngɔ-Kinshasa]].
 
