--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -260,7 +260,7 @@ Na mboka misusu mbiye ekopesa moto bokasi na 40%.
 * [[1997]] - 1997     [[Likulia Bolongo]]
 
 == Jyografi ==
-[[Image:Map - DR Congo, major languages.png|thumb|width:260px|right|Bakarta ya Nkota makonzi ya Babantu oyo makutani o Ekolo Kɔ́ngɔ]]
+[[Image:Map - DR Congo, major languages.svg|thumb|width:260px|right|Bakarta ya Nkota makonzi ya Babantu oyo makutani o Ekolo Kɔ́ngɔ]]
 
 ''Ekakoli ya molayi : [[Jyografi bya Kɔ́ngɔ-Kinshasa]]''
 * Tala mpe : [[Zamba o Bassin ya ebale Kɔ́ngɔ]] | [[Liste des villes de la République démocratique du Congo]]
