link Republiki ya Kɔ́ngɔ;

--- a/Lingála.mw
+++ b/Lingála.mw
@@ -3,7 +3,7 @@
 [[Image:Lingala-pn.jpg|thumb|texte manquant pour exemple de langue.]]
 [[Image:Map - DR Congo, major languages.svg|thumb|texte manquant pour exemple de langue.]]
 
-'''Lingála''' ezalí [[lokótá]] ya bato ba [[Kɔ́ngɔ-Brazzaville]] mpé ba [[Kɔ́ngɔ-Kinshasa]].
+'''Lingála''' ezalí [[lokótá]] ya bato ba [[Republiki ya Kɔ́ngɔ|Kɔ́ngɔ-Brazzaville]] mpé ba [[Kɔ́ngɔ-Kinshasa]].
 
 === [[Moleli|Mileli]] ===
 {| border=1 cellspacing=0 cellpadding=2 style="text-align:center; border-collapse:collapse;"
