--- a/Bilembo-nkita_bya_bisé.mw
+++ b/Bilembo-nkita_bya_bisé.mw
@@ -168,7 +168,7 @@ __NOTOC__
 |-
 | [[Honduras]] || [[Image:Honduras_COA.gif|120px|Honduras COA]]
 |-
-| [[Hungary]] || [[Image:Hungary_COA.jpg|center|120px]]
+| [[Hungary]] || [[Image:Hungary coa.png|center|120px]]
 |}
 
 ==I==
