--- a/Sosialisimɛ.mw
+++ b/Sosialisimɛ.mw
@@ -20,6 +20,7 @@
 [[eu:Sozialismo]]
 [[fa:سوسیالیسم]]
 [[fi:Sosialismi]]
+[[fr:Socialisme]]
 [[gl:Socialismo]]
 [[he:סוציאליזם]]
 [[hr:Socijalizam]]
