--- a/Yésu.mw
+++ b/Yésu.mw
@@ -1,3 +1,13 @@
-[[image:Christus Ravenna.jpg|thumb|Yésu Kristo (6e s.), Mosaik na San Apollinare Nuovo, [[Ravenna]]]]
+{{KimokristoS}}
+[[image:Christus Ravenna.jpg|thumb|left|Yésu Kristo (6e s.), Mosaik na San Apollinare Nuovo, [[Ravenna]]]]
 
 '''Yésu''' (mpé ''Yésu Kristo'', *7 ou 4 na [[Betelemi]], † 30, 31 ou 33 na [[Yerusalémi]]) azali te bobele moto monene ya kala, oyo azalaki na bomoi mpe akufaki kala. Maloba ya [[Nzambe]] eyebisi ye azali Nzambe Mosali na biloko nyonso.
+
+{{ndámbo}}
+
+[[category:relijió]]
+[[category:boklísto]]
+
+[[af:Jesus Christus]]
+[[de:Jesus Christus]]
+[[pt:Jesus Cristo]]
