--- a/Paláki.mw
+++ b/Paláki.mw
@@ -1,6 +1,6 @@
 [[category:Bongana masíni]]
 {{ndámbo}}
-[[Image:Etiquette cd-rom 01.png|thumb|*]]
+[[Image:Etiquette cd-rom 01.svg|thumb|*]]
 
 [[de:CD-ROM]] 
 [[en:CD-ROM]] 
