--- a/Demokrasi.mw
+++ b/Demokrasi.mw
@@ -8,6 +8,9 @@ Baye bazali na bokonzi bazwi bwangó na maboko ma bato ba ekólo, mpé bokonzi b
 
 Demokrasi ezalí bobɛ́lɛ́ loléngé ya koyángela tɛ́, kasi mpé mabɔngí mansɔ maye makosale 'te tokoka koyángela na loléngé ya demokrasi. Tokotanga mabɔngí manɛ́nɛ manei, maye tokotala lokóla makonzi ma demokrasi: bomípɛ́sí ya bato bánsɔ, botali bato bánsɔ loléngé mɔ̌kɔ́, [[bonsɔ́mí]] mpé bolukí bolámu bwa bato bánsɔ.
 
+==Tála mpé==
+* Mpundu, P.: ''Demokrasi''. Kinshassa: Éditions d'Esperance.
+
 ===Mokango===
 * [[Politiki]]
 * [[Lisakoli_ya_molongo_ya_makoki_ya_moto]]
