--- a/Politíki.mw
+++ b/Politíki.mw
@@ -24,8 +24,11 @@ Nzela ya misato, [[komynisimɛ]] ezalí politiki ékosenga bokulaka mpe matomba 
 * [[Lisakoli ya molongo ya makoki ya moto]]
 
 ===Botángi===
-* E. Dungia, (1992), Mobutu et l'argent du Zaïre. Révélations d'un diplomate, ex-agent secret, Paris, L'Harmattan, 215 p.
-* C. Braeckman, (1992), Le dinosaure. Le Zaïre de Mobutu, Paris, Fayard, 383 p.
+* Bapu, M. et alii, ''Le Zaïre que nous voulons. Un projet de société''. Kinshasa: Cepas, 1993.
+* Braeckman, C., ''Le dinosaure. Le Zaïre de Mobutu.'' Paris: Fayard, 1992. 383 p.
+* Dungia, E., ''Mobutu et l'argent du Zaïre. Révélations d'un diplomate, ex-agent secret''. Paris: L'Harmattan, 1992. 215 p.
+* Esoavelomandroso, M. et Feltz, G., ''Démocratie et développement. Mirage ou espoir raisonnable?''. Paris, Karthala, 1995.
+* Kadima Tshimanga, B. et alii, ''De la démocratie au Zaïre: consensus lexicaux d'un peuple en délire''. A. M. d'Ans, 1995. 
 
 [[an:Politica]]
 [[ar:سياسة]]
