*Empty MediaWiki Message*

--- a/Politíki.mw
+++ b/Politíki.mw
@@ -8,7 +8,10 @@ Mwa likebisi litali liloba ''politiki''. Soki toyoki liloba «politiki» to «ko
 
 Yango wana, na mosala mwa politiki, moto akoluka malamu mpo ya ye moko mpenza te, mpo ya libota lya ye te, akoluka se bolamu bwa batu banso lisanga.
 
-Ezalí na mitindo mingi ya politiki, mpe politiki ekabwaní nzela misato:
+Mpo ya ''bakonzi ba [[leta]]'', kosenga bato bazala non-viola, elingi koloba mbala mingi kosenga bango basala eloko moko te, ata bazali komona mpasi ndenge na ngenge..., batala se na miso ata babeti to babomi bango. Mpo ya parti politiki iboyi ''bisalela bya leta'', mingi bazali komitanga ba non-viola bobele mpo bazangi mandoki to bibuneli mpo ya kozongisela ''bakonzi ba leta'' violans eye bazali kosala bango. Mpo ya ba Eklezya, soki bazali na ngambo ya bakonzi ba leta, bakoteya non-violans oyo elingi koloba komitika na mpasi.
+
+
+E.alí na mitindo mingi ya politiki, mpe politiki ekabwaní nzela misato:
 
 === Kapitalismɛ ===
 Nzela ya liboso, politiki ya [[kapitalismɛ]] elingí koloba politiki wapi bokulaka mpe matomba ya mosala mazalí mpɔ na basali tɛ kasi mazalí mpɔ na bomongo ya bokulaka babéngaka bango bakapitalistɛ elingí koloba bakóló-bokulaka mosɔlɔ.
@@ -29,6 +32,7 @@ Nzela ya misato, [[komynisimɛ]] ezalí politiki ékosenga bokulaka mpe matomba 
 * Dungia, E., ''Mobutu et l'argent du Zaïre. Révélations d'un diplomate, ex-agent secret''. Paris: L'Harmattan, 1992. 215 p.
 * Esoavelomandroso, M. et Feltz, G., ''Démocratie et développement. Mirage ou espoir raisonnable?''. Paris, Karthala, 1995.
 * Kadima Tshimanga, B. et alii, ''De la démocratie au Zaïre: consensus lexicaux d'un peuple en délire''. A. M. d'Ans, 1995. 
+* Mpundu, J., ''Kobongisa mboka na boboto''. Kinshasa: Éditions d'Esperance.
 
 [[an:Politica]]
 [[ar:سياسة]]
