robot  Ajoute: scn

--- a/Kémi.mw
+++ b/Kémi.mw
@@ -85,6 +85,7 @@ Ndakisa : [[mokokano]] ya kosala [[mái]]
 [[ro:Chimie]]
 [[ru:Химия]]
 [[sc:Chìmica]]
+[[scn:Chìmica]]
 [[sco:Chemistry]]
 [[simple:Chemistry]]
 [[sk:Chémia]]
