--- a/Vincent_wa_Paul.mw
+++ b/Vincent_wa_Paul.mw
@@ -8,7 +8,7 @@ Kasi manso maleki lokola Vincent akanisaki te. [[Ekólo]] Falansia ezalaki na mi
 O mobu [[1617]], makambo mabale mamemi ye na mbongwana ena. O sanza ya yambo ya mobu mona, babengi ye akenda kosalisa moto moko alingi awei. Banso bazalaki komona moto ona lokola nsuka ya moto molamu. Kasi yemei ayebisi Vincent 'te soki asikolaka molimo mwa ye na sakramentu ya ntubela te, mbele awei na masumu maluti. Bobola bona bwa molimo bobeti motema mwa Vincent mingi. Se o mobu mona, mokolo moko mwa sanza ya mwambi, na ngonga alingi kobanda losambo la misa, bayeli yé nsango 'te libota lyoko lizali na mpasi, mpe banso ba libota nde bakufi soki bazwi lisalisi te. Vincent wa Paul alendisi bakristu 'te basalisa bango. Aluki mpe kobongisa lisalisi lina. Bobola bona bwa nzoto bobeti mpe motema mwa Vincent wa Paul. Banda ntango ena nde aluki ntango inso o mosala mwa ye kobikisa na molimo mpe na nzoto ya bato, mingi mpenza babola.
 
 == _ ==
-Ut'o mobu 1617, Vincent wa Paul amipesi na kosalela Nsango Elamu mpe baninga: "Mbala inso bosalaki bongo na moko wa bandeko ba ngai, bosalaki ngai moko" (Mt 25, 40). Vincent wa Paul akosakola nsima ya [[Kristu]]: ''Elimo wa Nzambe akiteli ngai, zambi Mokonzi apakoli ngai mafuta masantu; mpo 'te nasangela babola Nsango Elamu... " (Lc 4, 18). Bomoi bwa ye mobimba amipesi na babola; asalisi mpe bato ba nkita mpo 'te bayeba komipesa o mosala mya babola bango bazali "bankumu mpe bakonzi ba biso".
+Ut'o mobu 1617, Vincent wa Paul amipesi na kosalela Nsango Elamu mpe baninga: "Mbala inso bosalaki bongo na moko wa bandeko ba ngai, bosalaki ngai moko" (Mt 25, 40). Vincent wa Paul akosakola nsima ya [[Yésu|Kristu]]: ''Elimo wa Nzambe akiteli ngai, zambi Mokonzi apakoli ngai mafuta masantu; mpo 'te nasangela babola Nsango Elamu... " (Lc 4, 18). Bomoi bwa ye mobimba amipesi na babola; asalisi mpe bato ba nkita mpo 'te bayeba komipesa o mosala mya babola bango bazali "bankumu mpe bakonzi ba biso".
 
 Bakristu baike basangani, bamipesi motema mobimba o mosala mwango mpo ya lifuta te, mingi mpenza bamama, baye asangisi o lisanga na nkombo ''confrerie de la charité'' (eyebani lelo na nkombo ''Association Internationale des Charités''). Lisanga lina nde liboti, o mobu 1633, lingomba lya ba ''Filles de la charité'', liye Vincent abandisi elongo na [[Louise de Marillac]]. Mpe o mobu [[1625]] akeli lingomba lya basango [[Lazariste]] to "Congrégation de la Mission"; bamipesa na babola bipai binso, yambo mpenza o bituka bike; basikola milimo mibungi; basunga Eklezya, bateya o likindo mpe baluka bopeto bwa bango moko.
 
@@ -16,7 +16,7 @@ Vincent wa Paul amipesi na kobongisa bosalisani, akongoli mbongo na biloko mpo y
 
 Asangisi makoki manso azwaki, asalisi bato ba mawa, abokoli bana bitike, bawei nzala na bato ba boloko, ba mpaka na bitula ndenge na ndenge, na mpe mabota mazalaki na mpasi. Ekosalisa ye moto, ayebi 'te moto ona azali o kati ya lisanga mpe lisanga lizali na etamboleli ya yango. Yango wana esengeli mpe koluka kobongisa bomoi mpe ezaleli ya masanga ma bato.
 
-Apesi babola lokumu (bazali "bankumu mpe bakonzi ba biso"), asikoli bomoi bwa bango mobimba. Alingi kotala mobola lokola moto mpamba te, kasi lokola moto oyo azali na nkombo. Alingi batu na ndenge ezali komonana. Azwi makasi ma kolakisa na Eklezya mpe na mokili mokumba mwa bango mpo ya libiki lya babola. Na maloba mpe na misala mya ye, abongoli makanisi ma bato mingi mpe bizaleli mingi bya ntango ya ye. Sekele to ndanga ya molende mwa ye mpe ya boyebi kosalisa nde : Elimo ya [[Yezu]] Kristu! 
+Apesi babola lokumu (bazali "bankumu mpe bakonzi ba biso"), asikoli bomoi bwa bango mobimba. Alingi kotala mobola lokola moto mpamba te, kasi lokola moto oyo azali na nkombo. Alingi batu na ndenge ezali komonana. Azwi makasi ma kolakisa na Eklezya mpe na mokili mokumba mwa bango mpo ya libiki lya babola. Na maloba mpe na misala mya ye, abongoli makanisi ma bato mingi mpe bizaleli mingi bya ntango ya ye. Sekele to ndanga ya molende mwa ye mpe ya boyebi kosalisa nde : Elimo ya [[Yésu|Yésu Kristu]]! 
 
 ==Mankasa olibanda Wikipedia==
 [(http://www.st-vincent-de-paul.org/) (Société Saint Vincent de Paul)]
