de: en: fr: nl: pt: ru:

--- a/Lazariste.mw
+++ b/Lazariste.mw
@@ -113,3 +113,10 @@ Maison "ad instar domus" Ba Lazariste ba Liège bavandi esika yoko te, kasi baza
 |}
 [[category:relijió]]
 [[category:boklísto]]
+
+[[de:Lazaristen]]
+[[en:Lazarists]]
+[[fr:Lazaristes]]
+[[nl:Lazaristen]]
+[[pt:Congregação da Missão]]
+[[ru:Лазаристы]]
