--- a/Lazariste.mw
+++ b/Lazariste.mw
@@ -1,11 +1,11 @@
 [[Image:StVdP.jpg|thumb|Santu Vincent wa Paul]]
 
-'''Congrégation de la Mission (Lazariste)''' ebandi o mobu 1625 o mboka [[Paris]]. Kasi ut'o ebandela, mosala mwa lingomba lina moyebanaki mpe o bikolo bisusu.
+'''Congrégation de la Mission (Lazariste)''' ebandi o mobu 1625 o mboka [[Pari]]. Kasi ut'o ebandela, mosala mwa lingomba lina moyebanaki mpe o bikolo bisusu.
 
 Lingomba ya Mission lisangisi ba nganga-[[Nzambe]] na mpe ba mofulele. Bango batangemi ba ''Religieux'' te, ata ko bakosalaka bilako. Likanisi ya Mosantu [[Vincent wa Paul]] lizalaki 'te akoka kobongisa lingomba lyoko na ntina ya kozala mpe kosala mosala lisanga na bato banso ba mokili. Engebene na mibeko mya Eklezya, bakotanga lyango "société de vie apostolique".
 
 == Ntina ya lingomba ==
-Lingomba lya Mission lizali kosangela nsango elamu na babola, na nguya ya elimo ya [[Kristu]]. Mosala mokotinda ba Lazariste bazala na bizaleli biye :
+Lingomba lya Mission lizali kosangela nsango elamu na babola, na nguya ya elimo ya [[Yésu|Yésu Kristu]]. Mosala mokotinda ba Lazariste bazala na bizaleli biye :
 
 * Kolinga kosala liboso mpenza kati ya babola : bosangeli Nsango Elamu na babola, yango nde elembo'te bokonzi bwa likolo bokomi penepene (cf. Mt 11,5) ;
 * Kozala mpe na bokebi na makambo ma mokili, mingi mpenza koluka koyeba ntina ya bokeseni mpe bozangi bosembo o bokaboli nkita na kati ya mokili. wana nde kosala mosala mwa profeta o bosangeli Nsango Elamu;
@@ -55,11 +55,11 @@ Bakosala mpe mpo ya bokolisi masanga make ma bakristu to Communautés Ecclésial
 Tokokuta mpe ba Lazariste basusu bakopesa mateya o biteyelo bya bokolisi boyambi mpe bomoto, ezala biye bya ba diocèse, ezala biye bya lingomba lya Mission to mpe biye bya mangomba masusu.
 
 == SIEV mpe CIF ==
-Mpo ya bokolisi mposa ya boyekoli bomoi, misala mya mosantu Vincent mpe elimo atikeli biso, lisanga lyoko likelami na nkombo "Secrétariat International d'Etudes Vincentiennes" (SIEV). SIEV ezali kolengele sanza yoko ya mateya (mois vincentien) na Paris mpo ya ba Lazariste (babandi mpe kondima mangomba masusu maye makolandaka ndakisa ya mosantu Vincent).
+Mpo ya bokolisi mposa ya boyekoli bomoi, misala mya mosantu Vincent mpe elimo atikeli biso, lisanga lyoko likelami na nkombo "Secrétariat International d'Etudes Vincentiennes" (SIEV). SIEV ezali kolengele sanza yoko ya mateya (mois vincentien) na [[Pari]] mpo ya ba Lazariste (babandi mpe kondima mangomba masusu maye makolandaka ndakisa ya mosantu Vincent).
 
 Kaka o mboka Paris, babandisi "Centre International de Formation Saint-Vincent" (CIF). Ezali kopesa mateya ma recyclage mpo ya ba Lazariste bazali na mibu 35 kin'o 50.
 
-== Provincce ya Kɔ́ngɔ-Beljika ==
+== Province ya Kɔ́ngɔ-Beljika ==
 O ekolo [[Beljika]], ndako ya liboso ya lingomba lya Mission efungwamaki na [[Liège]] na 1902. Ndako ya yambo ya lingomba o Kɔ́ngɔ efungwami na [[Bikoro]] (Mbandaka) na 1926.
 
 Na 1929 bafungoli ndako ya [[Leuven]] mpe 1952 eye ya [[Lessines]]. O mobu 1947, ndako inso isangani o Province ya Beljika mpe ''Congo Belge'' ekomi "mission" ya Province ena.
@@ -120,3 +120,4 @@ Maison "ad instar domus" Ba Lazariste ba Liège bavandi esika yoko te, kasi baza
 [[nl:Lazaristen]]
 [[pt:Congregação da Missão]]
 [[ru:Лазаристы]]
+[[zh:遣使会]]
