--- a/Falansia.mw
+++ b/Falansia.mw
@@ -46,3 +46,106 @@ footnotes 	= [[Image:france cities.png|290px]]
 
 [[Category:Esé]]
 [[Category:Bisé ya Eropa]]
+[[Category:Falansia]]
+
+[[af:Frankryk]]
+[[als:Frankreich]]
+[[an:Franzia]]
+[[ang:Francland]]
+[[ar:فرنسا]]
+[[ast:Francia]]
+[[be:Францыя]]
+[[bg:Франция]]
+[[br:Bro-C'hall]]
+[[bs:Francuska]]
+[[ca:França]]
+[[co:Francia]]
+[[cs:Francie]]
+[[cv:Франци]]
+[[cy:Ffrainc]]
+[[da:Frankrig]]
+[[de:Frankreich]]
+[[el:Γαλλία]]
+[[en:France]]
+[[eo:Francio]]
+[[es:Francia]]
+[[et:Prantsusmaa]]
+[[eu:Frantzia]]
+[[fa:فرانسه]]
+[[fi:Ranska]]
+[[fiu-vro:Prantsusmaa]]
+[[fr:France]]
+[[frp:France]]
+[[fy:Frankryk]]
+[[ga:An Fhrainc]]
+[[gd:An Fhraing]]
+[[gl:Francia - France]]
+[[gu:ફ્રાઁસ]]
+[[he:צרפת]]
+[[hi:फ़्राँस]]
+[[hr:Francuska]]
+[[ht:Frans]]
+[[hu:Franciaország]]
+[[hy:Ֆրանսիա]]
+[[ia:Francia]]
+[[id:Perancis]]
+[[io:Francia]]
+[[is:Frakkland]]
+[[it:Francia]]
+[[ja:フランス]]
+[[jbo:fasygu'e]]
+[[ka:საფრანგეთი]]
+[[ko:프랑스]]
+[[ks:फ्रांस]]
+[[ku:Fransa]]
+[[kw:Pow Frynk]]
+[[la:Francia]]
+[[lad:Fransia]]
+[[lb:Frankräich]]
+[[li:Frankriek]]
+[[lt:Prancūzija]]
+[[lv:Francija]]
+[[mg:Frantsa]]
+[[mk:Франција]]
+[[mn:Франц улс]]
+[[mr:फ्रांस]]
+[[ms:Perancis]]
+[[na:France]]
+[[nds:Frankriek]]
+[[nds-nl:Fraankriek]]
+[[nl:Frankrijk]]
+[[nn:Frankrike]]
+[[no:Frankrike]]
+[[nrm:France]]
+[[oc:França]]
+[[os:Франц]]
+[[pl:Francja]]
+[[ps:فرانسه]]
+[[pt:França]]
+[[rm:Frantscha]]
+[[rmy:Franchiya]]
+[[ro:Franţa]]
+[[ru:Франция]]
+[[sa:फ्रांस]]
+[[sc:Frantza]]
+[[scn:Francia]]
+[[sco:Fraunce]]
+[[simple:France]]
+[[sk:Francúzsko]]
+[[sl:Francija]]
+[[sq:Franca]]
+[[sr:Француска]]
+[[st:France]]
+[[sv:Frankrike]]
+[[ta:பிரான்ஸ்]]
+[[tet:Fransa]]
+[[th:ประเทศฝรั่งเศส]]
+[[tl:Pransya]]
+[[tpi:Pranis]]
+[[tr:Fransa]]
+[[ug:فرانسىيە]]
+[[uk:Франція]]
+[[ur:فرانس]]
+[[vi:Pháp]]
+[[zh:法国]]
+[[zh-min-nan:Hoat-kok]]
