*Empty MediaWiki Message*

--- a/Kinsásá.mw
+++ b/Kinsásá.mw
@@ -44,7 +44,7 @@ Kinshasa suffered greatly due to Mobutu's excesses, mass corruption, nepotism an
 ==Tálá mpé==
 *[[Repubiliki ya Kɔ́ngɔ Demokratiki]]
 
-[[Category:Bingumba mikonzi ya Afrika]]
+[[Category:Mbóka-mokonzi]]
 [[Category:Kɔ́ngɔ-Kinshasa]]
 [[Category:Bituka bya Kɔ́ngɔ-Kinshasa]]
 [[Category:Bingumba bya Kɔ́ngɔ-Kinshasa]]
