*Empty MediaWiki Message*

--- a/Bakambi-ekólo_ba_Kongó-Kinsásá.mw
+++ b/Bakambi-ekólo_ba_Kongó-Kinsásá.mw
@@ -9,9 +9,9 @@ Mabomí óyo elandi elakisi liste ya '''bakambi-mboka''' óyo balandanaki o ekó
 |- valign=top
 |'''[[Kɔ́ngɔ-Kinshasa|Repubiliki ya Kɔ́ngɔ (Kinshasa)]]'''||colspan="3"|''Independence from [[Belgium]]''
 |- valign=top bgcolor="#ffffec"
-|<small>[[1 yuli]] [[1960]] to [[1 ogusiti]] [[1964]]||'''[[Joseph Kasavubu]]''', <small>Mokambi leta||<small>[[Association des personnes de Bakongo|ABAKO]]||&nbsp;
+|<small>[[1 yuli]] [[1960]] to [[1 ogusiti]] [[1964]]||'''[[Joseph Kasa-vubu]]''', <small>Mokambi leta||<small>[[Association des personnes de Bakongo|ABAKO]]||&nbsp;
 |- valign=top bgcolor="#ffffec"
-|<small>[[1 ogusiti]] [[1964]] to [[25 novɛmbɛ]] [[1965]]||'''[[Joseph Kasavubu]]''', <small>Mokambi ekolo||<small>ABAKO||&nbsp;
+|<small>[[1 ogusiti]] [[1964]] to [[25 novɛmbɛ]] [[1965]]||'''[[Joseph Kasa-vubu]]''', <small>Mokambi ekolo||<small>ABAKO||&nbsp;
 |- valign=top bgcolor="#ffffec"
 |<small>[[31 marsi]] [[1961]] to [[5 ogusiti]] [[1961]]||'''[[Antoine Gizenga]]''', <small>Mokambi leta||<small>MNC-L||<small>In rebellion, at [[Stanleyville]]
 |- valign=top bgcolor="#ffffec"
