*Empty MediaWiki Message*

--- a/Fidel_Castro.mw
+++ b/Fidel_Castro.mw
@@ -1,4 +1,4 @@
-'''Fidel Alejandreo {{smcp|Castro Rúz}}''', abotí o [[mokɔlɔ 13 ya sánzá ya mwambe]] o [[mobú 1926]], ezalí Tatá-Mokonzi ya [[Cuba]].
+'''Fidel Alejandro {{smcp|Castro Rúz}}''', abotí o [[mokɔlɔ 13 ya sánzá ya mwambe]] o [[mobú 1926]], ezalí Tatá-Mokonzi ya [[Cuba]].
 
 {{ndámbo}}
 
