--- a/Fidel_Castro.mw
+++ b/Fidel_Castro.mw
@@ -1,3 +1,4 @@
+[[Image:Fidel_Castro5_cropped.JPG|right|thumb|Fidel Castro, Tatá-Mokonzi ya Cuba]]
 '''Fidel Alejandro {{smcp|Castro Rúz}}''', abotí o [[mokɔlɔ 13 ya sánzá ya mwambe]] o [[mobú 1926]], ezalí Tatá-Mokonzi ya [[Cuba]].
 
 {{ndámbo}}
