Redirecting to [[George Walker Bush]]

--- a/George_W._Bush.mw
+++ b/George_W._Bush.mw
@@ -1,3 +1,1 @@
-'''George Walker {{smcp|Bush}}''', abótámi o [[mokɔlɔ 6 ya sánzá ya nsambo]] o [[mobú 1946]], ezalí [[Tatá-Mokonzi]] ya [[Esé ya Ameríka]].
-
-{{ndámbo}}
+#REDIRECT [[George Walker Bush]]
