*Empty MediaWiki Message*

--- a/George_Walker_Bush.mw
+++ b/George_Walker_Bush.mw
@@ -3,9 +3,9 @@
 [[Category:Ebótami na 1946|Bush, George Walker]]
 [[image:George-W-Bush.jpeg|250px|right|]]
 
-'''[[Media:En-us-George Walker Bush.ogg|George Walker Bush]]''' (né le [[6 yuli]] [[1946]]), mwana ya [[George Herbert Walker Bush]] mpe ya [[Barbara Pierce]], azali banda [[2001]] mokambi ekolo ya [[Lisanga ya Amerika]] ya 43e.
+'''[[Media:En-us-George Walker Bush.ogg|George Walker {{smcp|Bush}}]]''', abótámi o [[mokɔlɔ 6 ya sánzá ya nsambo]] o [[mobú 1946]], mwǎna ya [[George Herbert Walker Bush]] mpé ya [[Barbara Pierce]], azalí bandá [[mobú 2001]] [[mokambi ekólo]] ya [[Esé ya Ameríka]] ya 43.
 
-{{Amerika (Tata-mokonzi)}}
+{{Amerika (mokambi ekólo)}}
 {{ndámbo}}
 
 [[ang:George W. Bush]]
