*Empty MediaWiki Message*

--- a/George_Walker_Bush.mw
+++ b/George_Walker_Bush.mw
@@ -4,7 +4,7 @@
 [[image:George-W-Bush.jpeg|250px|right|]]
 
 '''[[Media:En-us-George Walker Bush.ogg|George Walker {{smcp|Bush}}]]''', abótámi o [[mokɔlɔ 6 ya sánzá ya nsambo]] o [[mobú 1946]], mwǎna ya [[George Herbert Walker Bush]] mpé ya [[Barbara Pierce]], azalí bandá [[mobú 2001]] [[mokambi ekólo]] ya [[Esé ya Ameríka]] ya 43.
-
+<br clear="all"/>
 {{Ameríka (mokambi ekólo)}}
 {{ndámbo}}
 
