*Empty MediaWiki Message*

--- a/Laurent-Désiré_Kabila.mw
+++ b/Laurent-Désiré_Kabila.mw
@@ -2,7 +2,7 @@
 
 [[image:Kabila,Laurent.jpg|thumb|Laurent Kabila, «Mzee», 1939–2001]]
 
-'''Laurent-Désiré {{smcp|Kabila}}''' (*[[Moba]], [[Likasi]] (Jadotville), [[Katanga]], [[27 novembere]] [[1939]] - †[[Kinshasa]], [[16 yanuari]] [[2001]]); Mokambi Ekolo ya Kɔ́ngɔ-Kinshasa [[17 may]] [[1997]] – 16 novembere 2001.
+'''Laurent-Désiré {{smcp|Kabila}}''' (*[[Moba]], [[Likasi]] (Jadotville), [[Katanga]], [[27 novembere]] [[1939]] - †[[Kinshasa]], [[16 yanuari]] [[2001]]); [[Mokambi-Ekólo]] ya Kɔ́ngɔ-Kinshasa [[17 may]] [[1997]] – 16 novembere 2001.
 
 == Tála mpé ==
 * [[Bakambi ekólo Kɔ́ngɔ-Kinshasa]]
