--- a/Joseph_Kabila.mw
+++ b/Joseph_Kabila.mw
@@ -3,7 +3,7 @@
 {{ndambo}}
 [[Image:Joseph_kabila.jpg|270px|thumb|Joseph Kabila]]
 
-'''Joseph {{smcp|Kabila}} Kabange''' (abótámi [[1971]]) akomaki mokambi-ekolo [[Kɔ́ngɔ-Kinshasa]] nàkolanda tata wa ye, [[Laurent-Désiré Kabila]], [[mokambi-ekólo]] óyo akutaki liwa na loboko wa garde-du-corps waye, na Janvier [[2001]].  Na kimokonzi na ye, azali komeka kosilisa bitumba, mpe kobimisa mapinzo ya bisé mosusu olibanda ekolo Kɔ́ngɔ-Kinshasa. Nàkolanda siniatire ya mokanda ya kimia, bulamatari ya sika, pona eyángeli ekolo pona mbula mibale, ekelamaki na [[2003]], mpe okati wango bakotaki bakambi ya mapinzo mibale ya makasi koleka, oyo basilikelaki bulamatari, to mpe barebɛl; bango bakotaki na kimokonzi lokola bakambi-babale, elongo na moto moko pona parti ya mokambi-ekolo, mpe moto mosusu pona bato oyo bakeseni na politiki ya parti oyo ezali na kimokonzi, kasi baselalaka minduki te (mingi-mingi babengami [[opozision]]). Mokanda ya mibeko-mokonzi to mpe konstitision elobi ete maponeli likosalema liboso ya 30 Yuni ya 2006.
+'''Joseph {{smcp|Kabila}} Kabange''' (abótámi [[1971]]) akomaki mokambi-ekolo [[Kɔ́ngɔ-Kinshasa]] nàkolanda tata wa ye, [[Laurent-Désiré Kabila]], [[Mokambi-Ekólo]] óyo akutaki liwa na loboko wa garde-du-corps waye, na Janvier [[2001]].  Na kimokonzi na ye, azali komeka kosilisa bitumba, mpe kobimisa mapinzo ya bisé mosusu olibanda ekolo Kɔ́ngɔ-Kinshasa. Nàkolanda siniatire ya mokanda ya kimia, bulamatari ya sika, pona eyángeli ekolo pona mbula mibale, ekelamaki na [[2003]], mpe okati wango bakotaki bakambi ya mapinzo mibale ya makasi koleka, oyo basilikelaki bulamatari, to mpe barebɛl; bango bakotaki na kimokonzi lokola bakambi-babale, elongo na moto moko pona parti ya mokambi-ekolo, mpe moto mosusu pona bato oyo bakeseni na politiki ya parti oyo ezali na kimokonzi, kasi baselalaka minduki te (mingi-mingi babengami [[opozision]]). Mokanda ya mibeko-mokonzi to mpe konstitision elobi ete maponeli likosalema liboso ya 30 Yuni ya 2006.
 
 <!--
 On [[March 28]], [[2004]], a coup attempt or mutiny around the capital [[Kinshasa]], allegedly organized by supporters of the late president [[Mobutu Sese Seko]], failed. On [[June 11]], 2004, coup plotters led by Major [[Eric Lenge]] attempted to take power, declaring that the country's peace process was not working, but were defeated by loyalist troops.
