*Empty MediaWiki Message*

--- a/Joseph_Kasa-Vubu.mw
+++ b/Joseph_Kasa-Vubu.mw
@@ -2,7 +2,7 @@
 
 [[Image:Pres. Joseph Kasa vubu.jpg|thumb|Joseph Kasa-Vubu]]
 
-'''Joseph {{smcp|Kasa-Vubu}}''', Mokambi Ekolo [[1 yuli]] [[1960]] - [[24 novembere]] [[1965]]
+'''Joseph {{smcp|Kasa-Vubu}}''', [[Mokambi-Ekólo]] [[1 yuli]] [[1960]] - [[24 novembere]] [[1965]]
 (Mokambi Bulamatari na yě azalákí [[Patrice Lumumba]])
 
 == Tála mpé ==
