*Empty MediaWiki Message*

--- a/Bakambi-ekólo_ba_Kongó-Kinsásá.mw
+++ b/Bakambi-ekólo_ba_Kongó-Kinsásá.mw
@@ -2,8 +2,8 @@ Mabomí óyo elandi elakisi liste ya '''bakambi-mboka''' óyo balandanaki o ekó
 
 {| border=1 style="border-collapse: collapse"
 |- align=left
-! width="25%"|Kimokonzi
-! width="20%"|Nkombo
+! width="25%"|Mokonzi
+! width="20%"|Nkómbó
 ! width="10%"|[[#Baparti:-|Parti]]
 ! width="20%"|Elembo
 |- valign=top
