*Empty MediaWiki Message*

--- a/Kinsásá.mw
+++ b/Kinsásá.mw
@@ -50,7 +50,7 @@ Kinshasa suffered greatly due to Mobutu's excesses, mass corruption, nepotism an
 
 {{ndambo}}
 {{BiteniKongoKinshasa}}
-{{CommunesKinshasa}}
+{{BakominiKinshasa}}
 
 [[da:Kinshasa]]
 [[de:Kinshasa]]
