--- a/Kinsásá.mw
+++ b/Kinsásá.mw
@@ -41,6 +41,7 @@ Kinshasa suffered greatly due to Mobutu's excesses, mass corruption, nepotism an
 *{{fr icon}} [http://www.stiopka.com/Leo/photos_leo.html Photos de Kinshasa / Léopoldville]
 
 ==Tálá mpé==
+*[[Molongo ya bakomini ya Kinshasa]]
 *[[Repubiliki ya Kɔ́ngɔ Demokratiki]]
 
 [[Category:Mbóka-mokonzi]]
@@ -48,9 +49,9 @@ Kinshasa suffered greatly due to Mobutu's excesses, mass corruption, nepotism an
 [[Category:Bituka bya Kɔ́ngɔ-Kinshasa]]
 [[Category:Bingumba bya Kɔ́ngɔ-Kinshasa]]
 
-{{ndambo}}
-{{BiteniKongoKinshasa}}
 {{BakominiKinshasa}}
+{{BiteniKongoKinshasa}}
+{{ndambo}}
 
 [[da:Kinshasa]]
 [[de:Kinshasa]]
