*Empty MediaWiki Message*

--- a/Kinsásá.mw
+++ b/Kinsásá.mw
@@ -4,17 +4,71 @@ Mbóka tô engúmba '''Kinshasa''' - ekokí kotangemene ''Kinsásá'' tǒ mpé '
 
 == Jyografi ==
 [[Image:Kinshasa 2001.jpg|thumb|290px|Kinshasa, Kongo, 2001]]
-[[Image:Kinshasa.jpg|thumb|290px|Esika ya bapark ya bulevale ya 30 Yuni, Kinshasa, Kongo, Avrili 2003]]
+[[Image:Kinshasa 2003.jpg|thumb|290px|Esika ya bapark ya bulevale ya 30 Yuni, Kinshasa, Kongo, Avrili 2003]]
 
 <!--
 Kinshasa is a city of sharp contrasts, with posh residential and commercial areas, two universities, and sprawling slums coexisting side by side. 
 -->
 
-Ekútání na mabele o loboko-ya-mwǎsí ya '''Ebale ya [[Kɔ́ngɔ (ebale)|Kɔ́ngɔ]]'''. Na yangó etalaní pɛnɛ-pɛnɛ mpenza na '''[[Brazzaville]]''', [[mbóka-mokonzi]] ya '''[[Repubiliki ya Kɔ́ngɔ]]''' tǒ mpé '''[[Kɔ́ngɔ-Brazzaville]]'''. Kinshasa ekútání na 4&deg;16' Sud, 15&deg;17' Este (-4.2667, 15.28333).
+Ekútání na mabele o loboko-ya-mwǎsí ya '''Ebale ya [[Kɔ́ngɔ]]'''. Na yangó etalaní pɛnɛ-pɛnɛ mpenza na '''[[Brazzaville]]''', [[mbóka-mokonzi]] ya '''[[Republiki ya Kɔ́ngɔ]]''' tǒ mpé '''[[Kɔ́ngɔ-Brazzaville]]'''. Kinshasa ekútání na 4&deg;16' Sud, 15&deg;17' Este (-4.2667, 15.28333).
 
-Bisíká minɛ́nɛ ya êná engúmba: [[Cité de l'OUA]], ndáko ya '''[[Bulamatari ya Kɔ́ngɔ-Kinshasa]]'''; [[Komini ya Matonge]], óyo eyebaní mokili mobimba mpɔ̂ na [[malɛki-butu]] na yangó; [[komini ya Gombe]].  Engúmba óyo ezalí na [[bwǎto|mǎto]] ya ebale tǒ mpé [[ferry|baferry]] na [[esɛ́mɛlɔ]] ya [[Beach Ngobila]] mpɔ̂ na kokɛndɛ Brazzaville na [[Bangi]], na [[nzéla-masinu]] ’te na [[Matadi]], elongo na [[Aleopori ya N'Djili|Aleopori]] ya [[N’djili]].
+Bisíká minɛ́nɛ ya êná engúmba: [[Cité de l'OUA]], ndáko ya '''[[Bulamatari ya Kɔ́ngɔ-Kinshasa]]'''; Komini ya [[Matonge]], óyo eyebaní mokili mobimba mpɔ̂ na [[malɛki-butu]] na yangó; komini ya [[La Gombe (Kinshasa)|Gombe]].  Engúmba óyo ezalí na [[bwǎto|mǎto]] ya ebale tǒ mpé [[ferry|baferry]] na [[esɛ́mɛlɔ]] ya [[Beach Ngobila]] mpɔ̂ na kokɛndɛ Brazzaville na [[Bangi]], na [[nzéla-masinu]] ’te na [[Matadi]], elongo na [[Aleopori ya N'Djili|Aleopori]] ya [[N’djili]].
 
 Bilóko minɛ́nɛ óyo emonanaka míngi ezalí [[Buludingi ya SOZACOM]], Hotel Inter-Continental na [[Hotel Memling]], [[Zando monene]] ya Kinshasa, '''[[Mizé ya Kinshasa]]''' na [[Académie des Beaux-Arts]].  [[Bulevale ya 30 Juin]] ndé ekangasí biténi nyɔ́nsɔ ya êná engúmba.
+
+==Bato==
+{| border="1" style="float:left; margin: 1em;border-collapse:collapse;"
+|+ '''Évolution de la population de Kinshasa'''
+| valign="top" |
+{|
+! style="background:#efefef;" | Année
+! style="background:#efefef;" | Bato
+|-----
+| [[1920]] || align="right" | 1 600
+|-----
+| [[1936]] || align="right" | 40 300
+|-----
+| [[1938]] || align="right" | 35 900
+|-----
+| [[1939]] || align="right" | 42 000
+|-----
+| [[1947]] || align="right" | 126 100
+|-----
+| [[1957]] || align="right" | 299 800
+|-----
+| [[1959]] || align="right" | 402 500
+|-----
+| [[1968]] || align="right" | 1 052 500
+|}
+| valign="top" |
+{|
+! style="background:#efefef;" | Année
+! style="background:#efefef;" | Bato
+|-----
+| [[1970]] || align="right" | 1 323 000
+|-----
+| [[1974]] || align="right" | 1 990 700
+|-----
+| [[1976]] || align="right" | 2 443 900
+|-----
+| [[1984]] || align="right" | 2 664 309
+|-----
+| [[1991]] || align="right" | 3 804 000
+|-----
+| [[1994]] || align="right" | 4 655 313
+|-----
+| [[2005]] || align="right" | 7 500 000
+|-----
+| ''2015'' || align="right" | ''est. 12 000 000''
+|}
+|-
+| colspan="2" | <small>''Source: [http://www.library.uu.nl/wesp/populstat/Africa/congokit.htm Populstat], [http://www.gazetteer.de/c/c_cd.htm World Gazetteer]''</small>
+|}
+<!--
+Kinshasa a crû de manière considérable, passant donc de 500&nbsp;000 habitants à la fin des années 60, à près de 5 millions au début de ce troisième millénaire. Selon les estimations elle pourrait atteindre les 10 millions d'habitants en [[2015]] (se hissant ainsi dans le top-30 des plus grosses [[agglomération]]s mondiales).
+De fait, elle concentre du coup tous les problèmes des grandes villes du tiers monde... Famine, maladie, sous-emploi, sans emploi, impayement, paupérisation, exclusion sociale... telles sont les caractéristiques de la vie de la majeure partie de la population kinoise. Selon la [[Banque mondiale]] le volume des emplois créés par le secteur informel en milieu urbain en [[Afrique]] est quasi inégalé, avec 95% ! (contre « seulement » 45% et 50% du total, dans quelques villes comme [[Freetown]] ou [[Ouagadougou]]). Toutefois, toutes statistiques sur Kinshasa restent sujettes à caution...
+
+Quoiqu'il en soit, la misère y est très grande. En dépit du fait qu’il soit parmi les pays les plus riches d’[[Afrique]] quant aux richesses du sol, du sous-sol et humaines, le [[République démocratique du Congo|Congo]] occupe actuellement l’une des dernières places au monde quant à son [[Produit national brut|PNB]] et son niveau de vie réel.-->
 
 ==Historia==
 <!--
@@ -31,7 +85,82 @@ Kinshasa suffered greatly due to Mobutu's excesses, mass corruption, nepotism an
 ==Media==
 <!--Kinshasa is home to a large number of radio and TV stations. The National TV is housed in the city. Its 2 channels reach more or less the entire country. In additional to these stations, there are nearly a dozen terrestrial stations reaching the environs of the city, and sometimes a bit beyond.-->
 
+== Climat ==
+{| style="border:none; border-top: solid 1px; border-bottom: solid 1px; border-left: solid 1px; border-right: solid 1px; float:right; margin: 1em;"
+|+ '''Moyennes de température et de précipitations'''
+! style="background:#efefef;" | !! style="background:#efefef;" |  Min.<br /> (°C)!! style="background:#efefef;" | Max.<br /> (°C) !! style="background:#efefef;" | Pluie <br /> (mm)
+|-
+! style="background:#efefef;" | Yanuari 
+| align="center" | 21
+| align="center" | 31
+| align="center" | 135
+|-
+! style="background:#efefef;" | febuari
+| align="center" | 22
+| align="center" | 31
+| align="center" | 145
+|-
+! style="background:#efefef;" | mársi
+| align="center" | 22
+| align="center" | 32
+| align="center" | 196
+|-
+! style="background:#efefef;" | apríli
+| align="center" | 22
+| align="center" | 32
+| align="center" | 196
+|-
+! style="background:#efefef;" | mai
+| align="center" | 22
+| align="center" | 31
+| align="center" | 159
+|-
+! style="background:#efefef;" | yúni
+| align="center" | 19
+| align="center" | 29
+| align="center" | 8
+|-
+! style="background:#efefef;" | yúli
+| align="center" | 18
+| align="center" | 27
+| align="center" | 3
+|-
+! style="background:#efefef;" | ogusiti
+| align="center" | 18
+| align="center" | 29
+| align="center" | 3
+|-
+! style="background:#efefef;" | septembere
+| align="center" | 20
+| align="center" | 31
+| align="center" | 30
+|-
+! style="background:#efefef;" | ɔkɔtɔ́bɛ
+| align="center" | 21
+| align="center" | 31
+| align="center" | 119
+|-
+! style="background:#efefef;" | novɛ́mbɛ
+| align="center" | 22
+| align="center" | 31
+| align="center" | 222
+|-
+! style="background:#efefef;" | desembere
+| align="center" | 21
+| align="center" | 30
+| align="center" | 142
+|-
+! style="border-top:1px solid;" colspan="4" | <small>* Sources : [http://www.bbc.co.uk/weather/world/city_guides/results.shtml?tt=TT000770 BBC Weather]</small>
+|-
+|}
+<!--
+Les variations annuelles de température dans la région de Kinshasa sont d'environ 13 °[[Degré Celsius|Celsius]]. Le climat est de nature équatoriale.
+
+La saison sèche est de juin à septembre. Le reste de l'année est relativement pluvieux surtout aux alentours de mars ou novembre.-->
+
+
 == Nkásá-web o libándá Wikipedia ==
+*{{en icon}} [http://www.boxing-memorabilia.com/aliforeman2.htm Rumble In The Jungle - Muhammad Ali Kinshasa, 1974]
 *{{fr icon}} [http://www.monuc.org/downloads/KINSHASA_IKONOS_SKETCH100.pdf Carte détaillée de Kinshasa]
 *{{fr icon}} [http://www.lib.utexas.edu/maps/world_cities/kinshasa_2001.jpg Carte de la ville de Kinshasa] (2001)
 *{{fr icon}} [http://www.katembo.be/cartes/PlanLeoC.jpg Carte de Léopoldville] (1960)
@@ -44,14 +173,14 @@ Kinshasa suffered greatly due to Mobutu's excesses, mass corruption, nepotism an
 *[[Molongo ya bakomini ya Kinshasa]]
 *[[Repubiliki ya Kɔ́ngɔ Demokratiki]]
 
+{{BakominiKinshasa}}
+{{BiteniKongoKinshasa}}
+{{ndambo}}
+
 [[Category:Mbóka-mokonzi]]
 [[Category:Kɔ́ngɔ-Kinshasa]]
 [[Category:Bituka bya Kɔ́ngɔ-Kinshasa]]
 [[Category:Bingumba bya Kɔ́ngɔ-Kinshasa]]
-
-{{BakominiKinshasa}}
-{{BiteniKongoKinshasa}}
-{{ndambo}}
 
 [[da:Kinshasa]]
 [[de:Kinshasa]]
