--- a/Maluku_(Kinsásá).mw
+++ b/Maluku_(Kinsásá).mw
@@ -14,13 +14,13 @@ ProvIII=[[Kinshasa (province Constitution 2005)|Kinshasa]]
 [[Image:Maluku.jpg|thumb|right|250px|Baleinière sur le Congo au niveau de Maluku]]
 
 
-'''Maluku''' ezalí na mosíká komini ya monɛ́nɛ koleka, o kati engúmba [[Kinshasa]]. Ekokí sɔ̂lɔ 79% ya etando wa engúmba êná. Ekutani o eténi Nor-Este ya engúmba-etuka, na ebimélí ya likoló ya [[Pool Malebo]] (eyébánákí kala o nkómbó ''Stanley Pool''). Ezaláká motóngá [[etúleli]] ya [[aluminyu]]. 
+'''Maluku''' ezalí na mosíká komine ya monɛ́nɛ koleka, o kati engúmba [[Kinshasa]]. Ekokí sɔ̂lɔ́ 79% ya etando wa engúmba êná. Ekutani o eténi Nor-Este ya engúmba-etuka, na ebimélí ya likoló ya [[Pool Malebo]] (eyébánákí kala o nkómbó ''Stanley Pool''). Ezaláká motóngá [[etúleli]] ya [[aluminyu]]. 
 
 ==Tálá mpé==
 
 ===Mankásá o káti Wikipedia===
 
-*[[Molongo ya ba komini ya Kinshasa]]
+*[[Molongo ya bakomini ya Kinshasa]]
 
 ===Mankasa olibanda Wikipedia===
 *[http://www.lib.utexas.edu/maps/world_cities/kinshasa_2001.jpg Carte de la ville de Kinshasa] 
