--- a/Lingɛlɛ́sa.mw
+++ b/Lingɛlɛ́sa.mw
@@ -13,7 +13,9 @@
 [[an:Idioma anglés]]
 [[ang:Nīwu Englisc sprǣc]]
 [[ar:لغة إنجليزية]]
+[[arc:ܥܢܓܠܝܼܙܝܼ]]
 [[ast:Inglés]]
+[[az:İngilis dili]]
 [[be:Ангельская мова]]
 [[bg:Английски език]]
 [[br:Saozneg]]
@@ -65,7 +67,9 @@
 [[mk:Англиски јазик]]
 [[ms:Bahasa Inggeris]]
 [[nah:Inglestlahtoli]]
+[[nap:Lengua ngrese]]
 [[nds:Engelsche Spraak]]
+[[nds-nl:Ingels]]
 [[nl:Engels]]
 [[nn:Engelsk språk]]
 [[no:Engelsk språk]]
@@ -79,6 +83,7 @@
 [[rm:Lingua englaisa]]
 [[ro:Limba engleză]]
 [[ru:Английский язык]]
+[[scn:Lingua ngrisa]]
 [[sco:Inglis leid]]
 [[se:Eaŋgalsgiella]]
 [[sh:Engleski jezik]]
