robot  Ajoute: az, fa Modifie: hi

--- a/Swisi.mw
+++ b/Swisi.mw
@@ -59,6 +59,7 @@ footnotes     = |
 [[ang:Swissland]]
 [[ar:سويسرا]]
 [[ast:Suiza]]
+[[az:İsveçrə]]
 [[be:Швайцарыя]]
 [[bg:Швейцария]]
 [[bs:Švicarska]]
@@ -73,6 +74,7 @@ footnotes     = |
 [[es:Suiza]]
 [[et:Šveits]]
 [[eu:Suitza]]
+[[fa:سوئیس]]
 [[fi:Sveitsi]]
 [[fo:Sveis]]
 [[fr:Suisse]]
@@ -82,7 +84,7 @@ footnotes     = |
 [[gd:An Eilbheis]]
 [[gl:Suíza - Schweiz]]
 [[he:שווייץ]]
-[[hi:स्विट्ज़रलैंड]]
+[[hi:स्विट्स़रलैंड]]
 [[hr:Švicarska]]
 [[ht:Swis]]
 [[hu:Svájc]]
