--- a/Bilembo-nkita_bya_bisé.mw
+++ b/Bilembo-nkita_bya_bisé.mw
@@ -246,7 +246,7 @@ __NOTOC__
 |-
 | [[Lesotho]] || [[Image:Lesotho coa.png|120px]]
 |-
-| [[Liberia]] || [[Image:Lib-coa.png|120px]]
+| [[Liberia]] || [[Image:Coat of arms of Liberia.png|120px]]
 |-
 | [[Libîya]] || [[Image:Libyseal.gif|120px|Libya Coat of Arms]]
 |-
