--- a/Katanga.mw
+++ b/Katanga.mw
@@ -2,7 +2,7 @@
 [[Category:Bituka bya Kɔ́ngɔ-Kinshasa]]
 [[Image:DCongoKatanga.png|thumb|*]]
 [[Image:Stamp Katanga 1961 fair 50c.jpg|thumb|A postage stamp of independent Katanga]]
-[[Image:Flag Katanga.gif|thumb|Flag of independent Katanga]]
+[[Image:Flag of Katanga.png|thumb|Bɛndɛ́lɛ ya Katanga 1960 - 1961]]
 
 '''Katanga''' ezali etuka se moko ya [[Kɔ́ngɔ-Kinshasa]].
 
