*Empty MediaWiki Message*

--- a/Katanga.mw
+++ b/Katanga.mw
@@ -4,6 +4,7 @@
 [[Image:Stamp Katanga 1961 fair 50c.jpg|thumb|A postage stamp of independent Katanga]]
 [[Image:Flag of Katanga.png|thumb|Bɛndɛ́lɛ ya Katanga 1960 - 1963]]
 
+{{BiteniRDK}}
 '''Katanga''' ezali etuka se moko ya [[Kɔ́ngɔ-Kinshasa]].
 
 
