--- a/Katanga.mw
+++ b/Katanga.mw
@@ -1,15 +1,26 @@
-[[Category:Kɔ́ngɔ-Kinshasa]]
-[[Category:Bituka bya Kɔ́ngɔ-Kinshasa]]
-[[Image:DCongoKatanga.png|thumb|*]]
+{{BiteniRDK|
+nom=Etuka ya Katanga|
+carte=[[Image:DCongoKatanga.png|200px]]|
+capitale=[[Lubumbashi]]|
+gouverneur=M. [[Urbain Kisula Ngoy]] ([[PPRD]])|
+lg=[[Kiswahili]]|
+supkm2=496.871|
+pop=4.125.000|
+annéepop=[[1998]]|
+densité=8,30|
+ISO=CD-KT|
+dep=69|
+}}
+
 [[Image:Stamp Katanga 1961 fair 50c.jpg|thumb|A postage stamp of independent Katanga]]
 [[Image:Flag of Katanga.png|thumb|Bɛndɛ́lɛ ya Katanga 1960 - 1963]]
 
-{{BiteniRDK}}
 '''Katanga''' ezali etuka se moko ya [[Kɔ́ngɔ-Kinshasa]].
 
-
-
 {{BiteniKongoKinshasa}}
+
+[[Category:Kɔ́ngɔ-Kinshasa]]
+[[Category:Bituka bya Kɔ́ngɔ-Kinshasa]]
 
 [[de:Katanga]]
 [[en:Katanga Province]]
