--- a/Bandundu.mw
+++ b/Bandundu.mw
@@ -1,9 +1,21 @@
-<div style="float:right">[[image:DCongoBandundu.png]]</div>
-
+{{BiteniRDK|
+nom=Etúká ya Bandundu|
+carte=[[Image:DCongoBandundu.png|200px]]|
+capitale=[[Bandundu (ville)|Bandundu]]|
+gouverneur=M. [[Guy Kunza]]|
+lg=[[Kikongo]], [[Lingála]]|
+supkm2=295.658|
+pop=5.201.000|
+annéepop=[[1998]]|
+densité=17,59|
+ISO=CD-BN|
+dep=48|
+}}
 '''Bandundu''' ezalí [[etúká]] ya ekólo [[Kɔ́ngɔ-Kinshasa]].
 
 
 {{BiteniKongoKinshasa}}
+
 [[Category:Kɔ́ngɔ-Kinshasa]]
 [[Category:Bitúká bya Kɔ́ngɔ-Kinshasa]]
 
