*Empty MediaWiki Message*

--- a/Bas-Congo.mw
+++ b/Bas-Congo.mw
@@ -1,4 +1,16 @@
-<div style="float:right">[[image:DcongoBasCongo.PNG]]</div>
+{{BiteniRKD|
+nom=Etúká ya Bas-Congo|
+carte=[[Image:DcongoBasCongo.PNG|200px]]|
+capitale=[[Matadi]]|
+gouverneur=M. [[César Tsasa-di-Ntumba]]|
+lg=[[Kikongo]]|
+supkm2=53.920|
+pop= 2.835.000|
+annéepop=[[1998]]|
+densité= 52,57|
+ISO=CD-BC|
+dep=25|
+}}
 [[Image:Bas-congo.JPG|thumb|290px|Kitoko ya zamba ya Bas-Congo]]
 
 '''Bas-Congo''' ezali etuka se moko ya [[Kɔ́ngɔ-Kinshasa]] oyo ekangami na mayi-mozindo [[Atalantiki]]. Engumba-mokonzi ya Bas-Congo ezali [[Matadi]]. Ekangami mpe na bikolo ya [[Angola]] na [[Kɔ́ngɔ-Brazzaville]], mpe na etuka Bandundu, elongo na engumbá-etuka ya Kinshasa.
