*Empty MediaWiki Message*

--- a/Ekwatéli_(Kongó-Kinsásá).mw
+++ b/Ekwatéli_(Kongó-Kinsásá).mw
@@ -1,5 +1,17 @@
-<div style="float:right">[[image:DCongoEquator.png]]</div>
-'''Ekwatéli''' ezali [[etuka]] ya ekolo [[Kɔ́ngɔ-Kinshasa]]. Ekutanemi na Nor ya ekolo ena, mpe ekangami na [[Kɔ́ngɔ-Brazzaville]] na Weste, [[Santrafrika]] na Nor, etuka [[Orientale]] na Este, elongo na bituka [[Kasai-Oriental]], [[Kasai-Occidental]], na [[Bandundu]] na Sud.  Engumba-mokonzi ya etuka Ekwatéli ezali [[Mbandaka]], engumba mɔkɔ o pene ya ebale [[Kongo]].
+{{BiteniRKD|
+nom=Etúká ya Ekwatéli|
+carte=[[Image:DCongoEquator.png|200px]]|
+capitale=[[Mbandaka]]|
+supkm2=403.292|
+pop=4.820.000|
+annéepop=[[1998]]|
+densité=11,92|
+gouverneur=[[Yves Mobando Yogo]]|
+lg=[[Lingala]]|
+ISO=CD-EQ|
+dep=49|
+}}
+'''Ekwatéli''' ezali [[etúká]] ya ekolo [[Kɔ́ngɔ-Kinshasa]]. Ekutanemi na Nor ya ekolo ena, mpe ekangami na [[Kɔ́ngɔ-Brazzaville]] na Weste, [[Santrafrika]] na Nor, etuka [[Orientale]] na Este, elongo na bituka [[Kasai-Oriental]], [[Kasai-Occidental]], na [[Bandundu]] na Sud.  Engumba-mokonzi ya etuka Ekwatéli ezali [[Mbandaka]], engumba mɔkɔ o pene ya ebale [[Kɔ́ngɔ]].
 
 {{ndambo}}
 
