*Empty MediaWiki Message*

--- a/Kinsásá.mw
+++ b/Kinsásá.mw
@@ -1,4 +1,16 @@
-<div style="float:right">[[image:DCongoKinshasa.png]]</div>
+{{BiteniRKD|
+nom=Engúmba / Etúká ya Kinshasa|
+carte=[[image:DCongoKinshasa.png]]|
+capitale=[[Gombe (Kinshasa)|La Gombe]]|
+gouverneur=M. [[Kimbembe Mazunga]]|
+supkm2= 9 965|
+lg=[[Lingála]]|
+pop=7 500 000|
+annéepop=[[2005]]|
+densité=752,63|
+ISO=CD-KN|
+dep=59|
+}}
 
 Mbóka tô engúmba '''Kinshasa''' - ekokí kotangemene ''Kinsásá'' tǒ mpé ''Kincásá'' - (óyo eyebenákí kala o nkómbó '''[[Léopoldville]]''') ezalí '''[[mbóka-mokonzi]]''' ya '''[[Kɔ́ngɔ-Kinshasa|Repubiliki ya Kɔ́ngɔ Demokratiki]]''' tǒ mpé '''[[Kɔ́ngɔ-Kinshasa]]'''. Ezalí mpé [[etúká]] (''province'') ya ekólo êná. Ezalí engúmba monɛ́nɛ, na milioni 8 ya bato (est.). Elongo na nyɔ́nsɔ óyo, Kinshasa ezalí engúmba ya míbalé na bingumba nyɔ́nsɔ ya mokili, na elobelí [[lifalansé]], na sima ya engúmba '''[[Pari]]''' ([[Falansia]]), mpé ezalí o káti ya bingúmba minɛ́nɛ koleka ya [[Afrika]] o nsé ya [[Sahara]]. 
 
