*Empty MediaWiki Message*

--- a/Kapɔ́ti.mw
+++ b/Kapɔ́ti.mw
@@ -1,6 +1,6 @@
 {{ndambo}}
 
-[[image:preservatif1.jpg|thumb|Ekopikesa]]
+[[image:Condoms by Morrhigan.jpg|thumb|Ekopikesa]]
 [[category:Móngana]]
 [[category:sida]]
 [[Ekopekisa (Ndenge)|Ndenge ya kolata mpe kosalela ekanga]]
